# ros-code-assignment

./: README.md  app.py
backend/: code_checker.py  simulation_runner.py
ros-code/: pyvenv.cfg
test_packages/faulty_package/: package.xml
uploads/tmpmskn6meb/correct_package/: pick_and_place.py
uploads/tmpnl3j5cdh/correct_package/: package.xml  setup.py
uploads/tmpzxfts158/faulty_package/: faulty_node.py:
