<?xml version="1.0"?>
<package format="3">
  <name>faulty_package</name>
  <version>0.1.0</version>
  <description>Intentionally faulty package for testing</description>
  
  <maintainer email="test@test.com">Test</maintainer>
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
