<?xml version="1.0"?>
<package format="3">
  <name>pick_and_place_ur5</name>
  <version>1.0.0</version>
  <description>Simple pick and place for UR5</description>
  
  <maintainer email="intern@mavenai.com">Robotics Intern</maintainer>
  <license>MIT</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
